Link the select state of a typeLabel with of entities. 1.Work as below: 1-1. When a typeLable is seleted, all entities will be selected. 1-2. When at least one entity is unselected, the typeLabel will be unselected. 1-3. When all entities are selected, the typeLabel will be selected. 2.Update the button state by 'selectChanged' events instead of direct function call. 3.Add domUtil.manipulate to manipulate dom elements instead of domUtil.selector.domElement.

--- a/src/css/textae.css
+++ b/src/css/textae.css
@@ -87,21 +87,29 @@
 }
 
 .textae-editor__type_term-centric-mode {
-    height: 16px;
+    height: 18px;
+    margin-bottom: 0 !important;
     padding-top: 0 !important;
-    margin-bottom: 0 !important
 }
 
 .textae-editor__type-label {
-    position: relative;
+    border-color: darkgrey;
     border-radius: 4px;
-    -webkit-touch-callout: none;
+    border-style: solid;
+    border-width: 1px;
+    overflow: hidden;
+    position: relative;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    overflow: hidden;
+    -webkit-touch-callout: none;
+    z-index: 1;
+}
+
+.textae-editor__type-label.ui-selected {
+    border-color: red;
 }
 
 .textae-editor__type-label:hover {
@@ -111,6 +119,7 @@
 .textae-editor__entity-pane {
     position: relative;
     top: -25px;
+    z-index: 1;
 }
 
 .textae-editor__entity {
