--- a/src/css/textae.css
+++ b/src/css/textae.css
@@ -70,7 +70,7 @@
     border-width: 0px 1px;
     border-style: solid;
     border-color: #DDDDAA;
-    padding: 0 1px;
+    padding: 0;
     overflow: visible;
 }
 
