--- a/src/css/textae-control.css
+++ b/src/css/textae-control.css
@@ -12,11 +12,10 @@
     border-radius: 15px;
     border-right: 5px solid #555588;
     box-shadow: 6px 6px 6px 6px rgba(0,0,0,0.4);
+    display: inline-block;
     height: 28px;
     margin-left: 2px;
     padding: 4px 20px 0 10px;
-    position: fixed;
-    z-index: 2;
 }
 
 /*== Elements inside the textae_control ==*/
@@ -124,8 +123,6 @@
 .textae-control__setting-button {
     background: url("../images/application_view_tile.png");
 }
-
-
 
 .textae-control__about {
     border: solid 4px #aaaa88;
