--- a/src/css/textae.css
+++ b/src/css/textae.css
@@ -1,291 +1,10 @@
-
 *{
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
 
-.textae-editor {
-    position: relative;
-    top: 22px;
-    left: 0px;
-/*    height: 600px;
-    overflow: auto;
-*/    border: 1px solid black;
-    font-family: verdana, arial, helvetica, sans-serif;
-}
-
-.textae-editor__body__text-box {
-    line-height: 400%;
-}
-
-.textae-editor__body__annotation-box {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-}
-
-.textae-editor__footer {
-    position: relative;
-    bottom: 0px;
-
-    width: 90%;
-    height: 20px;
-    opacity: 0.9;
-
-    background-color: #DDDDFF;
-    /* fallback (Opera) */
-    background: #DDDDFF;
-    /* Mozilla: */
-    background: -moz-linear-gradient(left, #DDDDFF, #FFFFFF);
-    /* Chrome, Safari:*/
-    background: -webkit-gradient(linear,  left top, right top, from(#DDDDFF), to(#FFFFFF));
-    /* MSIE */
-    filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#DDDDFF', EndColorStr='#FFFFFF', GradientType=1);
-
-    overflow-y: hidden;
-}
-
-.textae-editor__footer__message {
-    margin-left: 10px;
-    font-style:italic;
-    color:gray;
-}
-
-.textae-editor__span {
-    border-style: solid;
-    border-color: #666;
-    border-width: 1px 0px;
-    background-color: rgba(100,100,215,0.5);
-    white-space: pre;
-}
-
-.textae-editor__span.ui-selected {
-    background-color: rgba(255,200,100,0.9);
-    color: #0000DD;
-}
-
-.textae-editor__grid {
-    position: absolute;
-    border-width: 0px 1px;
-    border-style: solid;
-    border-color: #DDDDAA;
-    padding: 0;
-    overflow: visible;
-}
-
-.textae-editor__type, .textae-editor__type_term-centric-mode {
-    position: relative;
-    text-align: center;
-    white-space: nowrap;
-    font-size: small;
-}
-
-.textae-editor__type {
-    height: 36px;
-}
-
-.textae-editor__type_term-centric-mode {
-    height: 18px;
-    margin-bottom: 0 !important;
-    padding-top: 0 !important;
-}
-
-.textae-editor__type-label {
-    border-color: darkgrey;
-    border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-    overflow: hidden;
-    position: relative;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-touch-callout: none;
-    z-index: 1;
-}
-
-.textae-editor__type-label.ui-selected {
-    box-shadow: 1px 1px 15px #F00;
-}
-
-.textae-editor__type:hover .textae-editor__type-label, .textae-editor__type_term-centric-mode:hover .textae-editor__type-label {
-    overflow: visible;
-}
-
-.textae-editor__entity-pane {
-    position: relative;
-    top: -28px;
-    z-index: 1;
-}
-
-.textae-editor__entity {
-    display: inline-block;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 6px;
-    width: 12px;
-    height: 12px;
-    background-color: lightblue;
-    margin: 0 auto;
-}
-
-.textae-editor__entity.ui-selected {
-    background-color: yellow;
-}
-
-.textae-editor__load-dialog__file-name, .textae-editor__save-dialog__file-name {
-    width: 345px;
-}
-
-.textae-editor__setting-dialog label{
-    display: inline-block;
-    width: 200px;
-    text-align: right;
-}
-
-.textae-editor__entity-pallet {
-    background-color: rgba(200,255,255,0.9);
-    border: solid 2px #333333;
-    font-size: x-small;
-    margin: 0px;
-    max-height: 100px;
-    overflow-x: hidden;
-    padding: 0px;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    width: auto;
-    z-index: 250;
-}
-
-.textae-editor__entity-pallet table, .textae-editor__entity-pallet tr, .textae-editor__entity-pallet td {
-    margin: 0px;
-    padding: 0px;
-    border-style: solid;
-    border-collapse: collapse;
-    border-width:1px;
-    border-color:#AAAAAA;
-}
-
-.textae-editor__entity-pallet table {
-    width: 100%;
-}
-
-.textae-editor__entity-pallet td.textae-editor__entity-pallet__entity-type__label {
-    padding: 5px;
-}
-
-.textae-editor__entity-pallet__entity-type {
-    opacity:0.8;
-}
-
-.textae-editor__entity-pallet__entity-type:hover {
-    opacity:1;
-}
-
-.textae-editor__entity-pallet__entity-type__radio, .textae-editor__entity-pallet__entity-type__label {
-    cursor: pointer;
-}
-
-.textae-editor__relation {
-    opacity:0.6;
-    z-index: 0;
-}
-
-.textae-editor__relation:hover {
-    opacity: 1;
-    z-index: 1;
-}
-
-.textae-editor__relation__label {
-    display:block;
-    white-space:nowrap;
-    font-size:x-small;
-    background-color:yellow;
-    opacity:0.6;
-    z-index: 0;
-}
-
-.textae-editor__relation__label:hover {
-    opacity: 1;
-    z-index: 2;
-}
-
-/* hover */
-.textae-editor__span:hover {
-    text-shadow: 1px 1px 1px #00D;
-    padding: 1px 0;
-    /*background-color: rgba(255,200,100,0.5);*/
-    /*color: red;*/
-}
-
-@-webkit-keyframes buzz {
-  50% {
-    -webkit-transform: translateX(3px) translateY(1px);
-    transform: translateX(3px) translateY(1px);
-  }
-
-  100% {
-    -webkit-transform: translateX(-3px) translateY(-1px);
-    transform: translateX(-3px) translateY(-1px);
-  }
-}
-
-@keyframes buzz {
-  50% {
-    -webkit-transform: translateX(3px) translateY(1px);
-    -ms-transform: translateX(3px) translateY(1px);
-    transform: translateX(3px) translateY(1px);
-  }
-
-  100% {
-    -webkit-transform: translateX(-3px) translateY(-1px);
-    -ms-transform: translateX(-3px) translateY(-1px);
-    transform: translateX(-3px) translateY(-1px);
-  }
-}
-
-.textae-editor__type {
-  /*display: inline-block;*/
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
-.textae-editor__type:hover, .textae-editor__type_term-centric-mode:hover {
-  -webkit-animation-name: buzz;
-  animation-name: buzz;
-  -webkit-animation-duration: .15s;
-  animation-duration: .15s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-}
-
-.textae-editor__type:hover, .textae-editor__type_term-centric-mode:hover {
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-
-.textae-editor__entity {
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: -webkit-transform;
-    transition-property: transform;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
-.textae-editor__entity:hover {
-    -webkit-transform: scale(1.8);
-    -ms-transform: scale(1.8);
-    transform: scale(1.8);
+.textae-tool__key-help {
+    background: url("../images/keyhelp.png");
+    height: 246px;
+    width: 385px;
 }
