Add Relation-Edit-Mode 1. Relations can be created. 2. Relations will hover at Relation-Edit-Mode only. 3. The Edit-Mode transition is below:    from mdoe: action         : to mode  1. term:       : instance on  : instance  2. term:       : relatin on     : relation  3. instance   : relation on   : relation  4. instance   : instance off : term  5. relation    : relation off   : instance  6. relation    : instance off : term

--- a/src/css/textae-control.css
+++ b/src/css/textae-control.css
@@ -88,6 +88,10 @@
     background: url("../images/btn_replicate_auto_16.png");
 }
 
+.textae-control__relation-edit-mode-button {
+    background: url("../images/btn_relation_16.png");
+}
+
 .textae-control__entity-button {
     background: url("../images/btn_denote_16.png");
 }
