--- a/src/css/textae-editor.css
+++ b/src/css/textae-editor.css
@@ -86,7 +86,7 @@
 }
 
 .textae-editor__type-label {
-    border-color: darkgrey;
+    border-color: #A9A9A9;
     border-radius: 4px;
     border-style: solid;
     border-width: 1px;
@@ -101,33 +101,33 @@
     z-index: 1;
 }
 
+.textae-editor__type-label, .textae-editor__entity,
+.textae-editor_relation-mode .textae-editor__type:hover .textae-editor__entity,
+.textae-editor_relation-mode .textae-editor__type:hover .textae-editor__type-label
+{
+    opacity: 0.8;
+    /* TODO 透明度を上げるとentityとlabelの重なった部分だけ色が濃くて目立ちます。 */
+}
+
 .textae-editor__type-label.ui-selected {
     box-shadow: 1px 1px 15px #F00;
 }
 
-.textae-editor__type:hover .textae-editor__type-label, .textae-editor__type_term-centric-mode:hover .textae-editor__type-label {
+.textae-editor__type:hover .textae-editor__entity,
+.textae-editor__type:hover .textae-editor__type-label, 
+.textae-editor__type_term-centric-mode:hover .textae-editor__type-label {
     overflow: visible;
+    opacity: 1;
+}
+
+.textae-editor__type:hover {
+    z-index: 3;
 }
 
 .textae-editor__entity-pane {
     position: relative;
     top: -28px;
     z-index: 1;
-}
-
-.textae-editor__entity {
-    display: inline-block;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 6px;
-    width: 12px;
-    height: 12px;
-    background-color: lightblue;
-    margin: 0 auto;
-}
-
-.textae-editor__entity.ui-selected {
-    background-color: yellow;
 }
 
 .textae-editor__load-dialog__file-name, .textae-editor__save-dialog__file-name {
@@ -145,7 +145,7 @@
     border: solid 2px #333333;
     font-size: x-small;
     margin: 0px;
-    max-height: 100px;
+    max-height: 300px;
     overflow-x: hidden;
     padding: 0px;
     -webkit-touch-callout: none;
@@ -176,34 +176,22 @@
 }
 
 .textae-editor__entity-pallet__entity-type {
-    opacity:0.8;
+    opacity: 0.8;
 }
 
 .textae-editor__entity-pallet__entity-type:hover {
-    opacity:1;
+    opacity: 1;
 }
 
 .textae-editor__entity-pallet__entity-type__radio, .textae-editor__entity-pallet__entity-type__label {
     cursor: pointer;
 }
 
-.textae-editor__relation {
-    opacity:0.6;
-    z-index: 0;
-}
-
-.textae-editor__relation__label {
-    display:block;
-    white-space:nowrap;
-    font-size:x-small;
-    background-color:yellow;
-    opacity:0.6;
-    z-index: 0;
-}
-
-.textae-editor__relation__label:hover {
-    opacity: 1;
-    z-index: 2;
+.textae-editor__entity-pallet__link {
+    background: url("../images/link.png");
+    display: inline-block;
+    height: 16px;
+    width: 16px;
 }
 
 /* hover */
@@ -238,13 +226,6 @@
   }
 }
 
-.textae-editor__type {
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
 .textae-editor__type:hover, .textae-editor__type_term-centric-mode:hover {
   -webkit-animation-name: textae-editor__type-buzz;
   animation-name: textae-editor__type-buzz;
@@ -252,37 +233,72 @@
   animation-duration: .15s;
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
-}
-
-.textae-editor__type:hover, .textae-editor__type_term-centric-mode:hover {
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
 
+/* entity */
+@-webkit-keyframes textae-editor__entity-buzz {
+  50% {
+    -webkit-transform: translateX(2px) translateY(1px);
+    transform: translateX(2px) translateY(1px);
+  }
+
+  100% {
+    -webkit-transform: translateX(-2px) translateY(-1px);
+    transform: translateX(-2px) translateY(-1px);
+  }
+}
+
 .textae-editor__entity {
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: -webkit-transform;
-    transition-property: transform;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    display: inline-block;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 6px;
+    width: 12px;
+    height: 12px;
+    background-color: #add8e6;
+    margin: 0 auto;
+}
+
+.textae-editor__entity.ui-selected {
+    background-color: yellow;
 }
 
 .textae-editor__entity:hover {
-    -webkit-transform: scale(1.8);
-    -ms-transform: scale(1.8);
-    transform: scale(1.8);
+    box-shadow: 1px 1px 10px #600;
 }
 
-/* relation mode */
+.textae-editor__relation {
+    opacity: 0.6;
+    z-index: 0;
+}
+
+.textae-editor__relation.ui-selected {
+    opacity: 1;
+    /*選択時にラベルを前に表示したいが、ラベルはrelationの子要素ではない*/
+}
+
+.textae-editor__relation__label {
+    background-color: yellow;
+    display: block;
+    font-size: x-small;
+    opacity: 0.6;
+    white-space: nowrap;
+    z-index: 0;
+}
+
+.textae-editor__relation__label:hover {
+    opacity: 1;
+    z-index: 2;
+}
+
+/* relation edit mode */
 .textae-editor_relation-mode {
     cursor: url("../images/Handwriting.cur"), default;
 }
 
-.textae-editor_relation-mode .textae-editor__type:hover{
+.textae-editor_relation-mode .textae-editor__type:hover {
   -webkit-animation-name: none;
   animation-name: none;
 }
@@ -292,7 +308,23 @@
     padding: 0;
 }
 
+.textae-editor_relation-mode .textae-editor__relation {
+    z-index: 1;
+}
+
+.textae-editor_relation-mode .textae-editor__relation path {
+    stroke-width: 4;
+}
+
 .textae-editor_relation-mode .textae-editor__relation:hover {
     opacity: 1;
     z-index: 1;
+}
+
+.textae-editor_relation-mode .textae-editor__relation__label {
+    z-index: 1;
+}
+
+.textae-editor_relation-mode .textae-editor__relation__label:hover {
+    z-index: 2;
 }
