--- a/src/css/textae-editor.css
+++ b/src/css/textae-editor.css
@@ -1,7 +1,5 @@
 .textae-editor {
-/*    height: 600px;
-    overflow: auto;
-*/    border: 1px solid black;
+    border: 1px solid black;
     font-family: verdana, arial, helvetica, sans-serif;
 }
 
@@ -14,19 +12,12 @@
 }
 
 .textae-editor__body__annotation-box {
+    left: 0px;
     position: absolute;
     top: 0px;
-    left: 0px;
 }
 
 .textae-editor__footer {
-    position: relative;
-    bottom: 0px;
-
-    width: 90%;
-    height: 20px;
-    opacity: 0.9;
-
     background-color: #DDDDFF;
     /* fallback (Opera) */
     background: #DDDDFF;
@@ -36,14 +27,18 @@
     background: -webkit-gradient(linear,  left top, right top, from(#DDDDFF), to(#FFFFFF));
     /* MSIE */
     filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#DDDDFF', EndColorStr='#FFFFFF', GradientType=1);
-
+    bottom: 0px;
+    height: 20px;
+    opacity: 0.9;
     overflow-y: hidden;
+    position: relative;
+    width: 90%;
 }
 
 .textae-editor__footer__message {
-    margin-left: 10px;
-    font-style:italic;
     color:gray;
+    font-style:italic;
+    margin-left: 10px;
 }
 
 .textae-editor__span {
@@ -60,29 +55,24 @@
 }
 
 .textae-editor__grid {
-    position: absolute;
-    border-width: 0px 1px;
-    border-style: solid;
     border-color: #DDDDAA;
-    padding: 0;
+    border-style: solid;
+    border-width: 0px 1px;
     overflow: visible;
+    padding: 0;
+    position: absolute;
 }
 
-.textae-editor__type, .textae-editor__type_term-centric-mode {
+.textae-editor__type {
+    font-size: small;
+    padding-top: 18px;
     position: relative;
     text-align: center;
     white-space: nowrap;
-    font-size: small;
 }
 
 .textae-editor__type {
     height: 36px;
-}
-
-.textae-editor__type_term-centric-mode {
-    height: 18px;
-    margin-bottom: 0 !important;
-    padding-top: 0 !important;
 }
 
 .textae-editor__type-label {
@@ -114,8 +104,7 @@
 }
 
 .textae-editor__type:hover .textae-editor__entity,
-.textae-editor__type:hover .textae-editor__type-label, 
-.textae-editor__type_term-centric-mode:hover .textae-editor__type-label {
+.textae-editor__type:hover .textae-editor__type-label {
     overflow: visible;
     opacity: 1;
 }
@@ -159,12 +148,12 @@
 }
 
 .textae-editor__entity-pallet table, .textae-editor__entity-pallet tr, .textae-editor__entity-pallet td {
+    border-collapse: collapse;
+    border-color:#AAAAAA;
+    border-style: solid;
+    border-width:1px;
     margin: 0px;
     padding: 0px;
-    border-style: solid;
-    border-collapse: collapse;
-    border-width:1px;
-    border-color:#AAAAAA;
 }
 
 .textae-editor__entity-pallet table {
@@ -226,7 +215,7 @@
   }
 }
 
-.textae-editor__type:hover, .textae-editor__type_term-centric-mode:hover {
+.textae-editor__type:hover {
   -webkit-animation-name: textae-editor__type-buzz;
   animation-name: textae-editor__type-buzz;
   -webkit-animation-duration: .15s;
@@ -251,14 +240,14 @@
 }
 
 .textae-editor__entity {
-    display: inline-block;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 6px;
-    width: 12px;
-    height: 12px;
     background-color: #add8e6;
+    border-radius: 6px;
+    border-style: solid;
+    border-width: 3px;
+    display: inline-block;
+    height: 12px;
     margin: 0 auto;
+    width: 12px;
 }
 
 .textae-editor__entity.ui-selected {
@@ -276,7 +265,6 @@
 
 .textae-editor__relation.ui-selected {
     opacity: 1;
-    /*選択時にラベルを前に表示したいが、ラベルはrelationの子要素ではない*/
 }
 
 .textae-editor__relation__label {
@@ -291,6 +279,29 @@
 .textae-editor__relation__label:hover {
     opacity: 1;
     z-index: 2;
+}
+
+/* term centric mode */
+.textae-editor_term-mode .textae-editor__type {
+    height: 18px;
+    margin-bottom: 0;
+    padding-top: 0;
+}
+
+.textae-editor_term-mode .textae-editor__relation, .textae-editor_term-mode .textae-editor__relation__label{
+    display: none;
+}
+
+.textae-editor_term-mode .textae-editor__entity-pane {
+    /*Set visibility style to hide entities, because size of entities are necesarry to render relation.*/
+    visibility: hidden;
+}
+
+.textae-editor_term-mode path, .textae-editor_term-mode circle {
+    fill: none;
+    height: 0;
+    stroke-width: 0;
+    width: 0;
 }
 
 /* relation edit mode */
