--- a/src/css/textae-editor.css
+++ b/src/css/textae-editor.css
@@ -306,7 +306,7 @@
 
 /* relation edit mode */
 .textae-editor_relation-mode {
-    cursor: url("../images/Handwriting.cur"), default;
+    cursor: url("../images/relation_cur.png"), default;
 }
 
 .textae-editor_relation-mode .textae-editor__type:hover {
