--- a/src/css/textae-control.css
+++ b/src/css/textae-control.css
@@ -15,7 +15,7 @@
     display: inline-block;
     height: 28px;
     margin-left: 2px;
-    padding: 4px 20px 0 10px;
+    padding: 0 20px 0 10px;
 }
 
 /*== Elements inside the textae_control ==*/
