--- a/src/css/textae.css
+++ b/src/css/textae.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     -moz-box-sizing: border-box;
+    font-family: verdana, arial, helvetica, sans-serif;
 }
 
 .textae-tool__key-help {
