--- a/src/css/textae-editor.css
+++ b/src/css/textae-editor.css
@@ -87,6 +87,7 @@
     border-radius: 4px;
     border-style: solid;
     border-width: 1px;
+    line-height: 16px;
     overflow: hidden;
     position: relative;
     -webkit-user-select: none;
