--- a/src/css/textae-editor.css
+++ b/src/css/textae-editor.css
@@ -60,6 +60,11 @@
     white-space: pre;
 }
 
+.textae-editor__span:hover {
+    text-shadow: 1px 1px 1px #00D;
+    padding: 1px 0;
+}
+
 .textae-editor__span.ui-selected {
     background-color: rgba(255,200,100,0.9);
     color: #0000DD;
@@ -82,9 +87,6 @@
     text-align: center;
     white-space: nowrap;
 }
-
-
-
 
 .textae-editor__type-label {
     border-color: #A9A9A9;
@@ -111,8 +113,8 @@
     /* TODO 透明度を上げるとentityとlabelの重なった部分だけ色が濃くて目立ちます。 */
 }
 
-.textae-editor__type-label.ui-selected, .textae-editor__type:hover .textae-editor__type-label.ui-selected {
-    box-shadow: 1px 1px 15px #F00;
+.textae-editor__type:hover {
+    z-index: 3;
 }
 
 .textae-editor__type:hover .textae-editor__entity,
@@ -125,8 +127,8 @@
     box-shadow: 1px 1px 10px #600;
 }
 
-.textae-editor__type:hover {
-    z-index: 3;
+.textae-editor__type-label.ui-selected, .textae-editor__type:hover .textae-editor__type-label.ui-selected {
+    box-shadow: 1px 1px 15px #F00;
 }
 
 .textae-editor__entity-pane {
@@ -199,12 +201,6 @@
     width: 16px;
 }
 
-/* hover */
-.textae-editor__span:hover {
-    text-shadow: 1px 1px 1px #00D;
-    padding: 1px 0;
-}
-
 /* entity */
 .textae-editor__entity {
     background-color: #add8e6;
@@ -217,25 +213,18 @@
     width: 12px;
 }
 
-.textae-editor__entity.ui-selected {
-    background-color: yellow;
-}
-
 .textae-editor__entity:hover {
     box-shadow: 1px 1px 10px #600;
 }
 
+.textae-editor__entity.ui-selected {
+    background-color: yellow;
+}
+
+/* relation */
 .textae-editor__relation {
     opacity: 0.6;
     z-index: 0;
-}
-
-.textae-editor__relation.ui-selected {
-    opacity: 1;
-}
-
-.textae-editor__relation.ui-selected path {
-    stroke-width: 4;
 }
 
 .textae-editor__relation.hover {
@@ -243,6 +232,14 @@
 }
 
 .textae-editor__relation.hover path {
+    stroke-width: 4;
+}
+
+.textae-editor__relation.ui-selected {
+    opacity: 1;
+}
+
+.textae-editor__relation.ui-selected path {
     stroke-width: 4;
 }
 
