--- a/src/css/textae-control.css
+++ b/src/css/textae-control.css
@@ -16,6 +16,8 @@
     height: 28px;
     margin-left: 2px;
     padding: 0 20px 0 10px;
+    position: relative;
+    z-index: 2;
 }
 
 /*== Elements inside the textae_control ==*/
