Set max width of the second column of the pallet.

--- a/src/css/textae-editor.css
+++ b/src/css/textae-editor.css
@@ -180,6 +180,7 @@
 
 .textae-editor__entity-pallet td.textae-editor__entity-pallet__entity-type__label {
     padding: 5px;
+    max-width: 800px;
 }
 
 .textae-editor__entity-pallet__entity-type {
