Add a reference to underscore.js.

--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="../lib/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="../lib/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="../js/lib-textae-4.0.1.min.js"></script>
 </head>
 
