Move css files of third-party libraries to vender directory.

--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="../css/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="../vender/jquery-ui-1.10.3.custom.min.css" />
     <link rel="stylesheet" href="../css/lib-textae-4.0.1.min.css">
     <link rel="stylesheet" href="textae.css">
 
