Rename a directory from 'js' to 'lib'.

--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../vender/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="../vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script type="text/javascript" src="../vender/underscore.js"></script>
-    <script type="text/javascript" src="../js/lib-textae-4.0.1.min.js"></script>
+    <script type="text/javascript" src="../lib/lib-textae-4.0.1.min.js"></script>
 </head>
 
 <body>
