Move the 'css' directory to the 'lib' directory.

--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../vender/jquery-ui-1.10.3.custom.min.css" />
-    <link rel="stylesheet" href="../css/lib-textae-4.0.1.min.css">
+    <link rel="stylesheet" href="../lib/css/lib-textae-4.0.1.min.css">
     <link rel="stylesheet" href="textae.css">
 
     <script type="text/javascript" src="../vender/jquery-2.0.3.min.js"></script>
