--- a/src/lib/css/textae.css
+++ b/src/lib/css/textae.css
@@ -5,7 +5,7 @@
 }
 
 .textae-tool__key-help {
-    background: url("../images/keyhelp.png");
+    background: url("./images/keyhelp.png");
     height: 246px;
     width: 385px;
 }
