Unify name of images for button icons.

--- a/src/lib/css/textae-control.css
+++ b/src/lib/css/textae-control.css
@@ -127,7 +127,7 @@
 }
 
 .textae-control__setting-button {
-    background: url("./images/application_view_tile.png");
+    background: url("./images/btn_setting_16.png");
 }
 
 .textae-control__about {
