--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../lib/css/lib-textae-4.0.1.min.css">
     <link rel="stylesheet" href="textae.css">
 
-    <script type="text/javascript" src="../vender/jquery-2.0.3.min.js"></script>
-    <script type="text/javascript" src="../vender/jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="../vender/jquery.jsPlumb-1.5.2-min.js"></script>
-    <script type="text/javascript" src="../vender/underscore.js"></script>
-    <script type="text/javascript" src="../lib/lib-textae-4.0.1.min.js"></script>
+    <script src="../vender/jquery-2.0.3.min.js"></script>
+    <script src="../vender/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="../vender/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script src="../vender/underscore.js"></script>
+    <script src="../lib/lib-textae-4.0.1.min.js"></script>
 </head>
 
 <body>
