--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -161,8 +161,9 @@
     width: 221px;
 }
 
-.textae-editor__load-dialog__file-name, .textae-editor__save-dialog__file-name {
+.textae-editor__load-dialog__file-name, .textae-editor__load-dialog__file, .textae-editor__save-dialog__file-name {
     width: 345px;
+    line-height: 16px;
 }
 
 /* pallet */
