Hide jsPlumb endpoints to prevent flash at the initiation.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -244,6 +244,10 @@
     z-index: 2;
 }
 
+._jsPlumb_endpoint{
+    visibility: hidden;
+}
+
 /* term centric mode */
 .textae-editor_term-mode .textae-editor__type {
     height: 18px;
