--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -315,3 +315,17 @@
     position: relative;
     top: -15px;
 }
+
+.textae-editor__relation__label.textae-editor__negation::before{
+    content: 'X';
+    right: 0;
+    position: absolute;
+    top: -12px;
+}
+
+.textae-editor__relation__label.textae-editor__speculation::after {
+    content: '?';
+    right: -0.5em;
+    position: relative;
+    top: -12px;
+}
