Add style of modifications of an entity. Add shadow at hover and bold at selected.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -214,10 +214,12 @@
 
 .textae-editor__entity:hover {
     box-shadow: 1px 1px 10px #600;
+    text-shadow: 1px 1px 1px #600;
 }
 
 .textae-editor__entity.ui-selected {
     background-color: yellow;
+    font-weight: 700;
 }
 
 /* relation */
