Bugfix: labels of relations was shown at the term-centric-mode.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -259,7 +259,7 @@
 }
 
 .textae-editor_term-mode .textae-editor__relation, .textae-editor_term-mode .textae-editor__relation__label{
-    display: none;
+    display: none !important;
 }
 
 .textae-editor_term-mode .textae-editor__entity-pane {
