Bug fix and big refactoring 1. Bugfix the cancelation of selection by body click was not work when the space between top line of the editor and the control has been clicked. 2. Bugfix a relation was pointed down when the predicate has been changed. 3. Extract many modules. 4. Move modules to folders per functional group.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -53,11 +53,14 @@
 }
 
 .textae-editor__span {
-    border-style: solid;
     border-color: #666;
+    border-style: solid;
     border-width: 1px 0px;
-    background-color: rgba(100,100,215,0.5);
     white-space: pre;
+}
+
+.textae-editor__span {
+    background-color: rgba(100,100,215,0.5);
 }
 
 .textae-editor__span:hover {
