New features:Show and edit block type entities. 1. Show spans  with block type entities as another color. 2. Block type entities is invisible. 3. Change type of an entity to block type and vice versa. 4. A block type entity has no relation.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -73,6 +73,16 @@
     color: #0000DD;
 }
 
+.textae-editor__span--block {
+    background-color: rgba(255,100,215,0.5);
+    white-space: normal;
+}
+
+.textae-editor__span--block.ui-selected {
+    background-color: rgba(255,100,100,0.9);
+    color: #0000DD;
+}
+
 .textae-editor__grid {
     border-color: #DDDDAA;
     border-style: solid;
