--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -236,27 +236,17 @@
 }
 
 /* relation */
-.textae-editor__relation {
-    opacity: 0.6;
-    z-index: 0;
-}
-
-.textae-editor__relation.ui-selected {
-    opacity: 1;
-}
-
 .textae-editor__relation__label {
     background-color: yellow;
     display: block;
     font-size: x-small;
     opacity: 0.6;
     white-space: nowrap;
-    z-index: 0;
 }
 
-.textae-editor__relation__label:hover, .textae-editor__relation__label.hover {
+.textae-editor__relation__label:hover,
+.textae-editor__relation__label.hover {
     opacity: 1;
-    z-index: 2;
     text-shadow: 1px 1px 1px #800;
 }
 
@@ -287,6 +277,17 @@
     width: 0;
 }
 
+/* instance edit mode */
+.textae-editor_instance-mode .textae-editor__relation:hover,
+.textae-editor_instance-mode .textae-editor__relation.hover {
+    z-index: 5;
+}
+
+.textae-editor_instance-mode .textae-editor__relation__label:hover,
+.textae-editor_instance-mode .textae-editor__relation__label.hover {
+    z-index: 6;
+}
+
 /* relation edit mode */
 .textae-editor_relation-mode {
     cursor: pointer;
@@ -305,7 +306,8 @@
     z-index: 5;
 }
 
-.textae-editor_relation-mode .textae-editor__relation:hover {
+.textae-editor_relation-mode .textae-editor__relation:hover,
+.textae-editor_relation-mode .textae-editor__relation.hover {
     z-index: 5;
 }
 
