--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="vender/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="vender/jquery-ui.min.css" />
     <link rel="stylesheet" href="lib/css/textae-{{version}}.min.css">
     <link rel="stylesheet" href="textae.css">
 
     <script src="vender/jquery-2.0.3.min.js"></script>
-    <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="vender/jquery-ui.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script src="vender/underscore.js"></script>
     <script src="lib/textae-{{version}}.min.js"></script>
