--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -7,6 +7,18 @@
     cursor: wait;
 }
 
+.textae-editor--wait::before {
+    content: '';
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 200;
+}
+
 .textae-editor .hidden {
     visibility: hidden;
 }
