Bug fix: Modifications are hard to see.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -295,21 +295,26 @@
 }
 
 /* modification */
-.textae-editor__entity.textae-editor__negation::before{
-    content: 'X';
-    left: -4px;
+.textae-editor__entity.textae-editor__negation::before,
+.textae-editor__entity.textae-editor__speculation::after {
+    display: block;
     position: relative;
+}
+
+.textae-editor__entity.textae-editor__negation::before {
+    content: 'X';
+    float: left;
+    left: -4px;
     top: -15px;
 }
 
 .textae-editor__entity.textae-editor__speculation::after {
     content: '?';
     left: -6px;
-    position: relative;
     top: -15px;
 }
 
-.textae-editor__relation__label.textae-editor__negation::before{
+.textae-editor__relation__label.textae-editor__negation::before {
     content: 'X';
     right: 0;
     position: absolute;
