Bug fix: A speculation were hidden that of a selected relation.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -322,6 +322,7 @@
 
 .textae-editor__relation__label.textae-editor__speculation::after {
     content: '?';
+    display: inline-block;
     right: -0.5em;
     position: relative;
     top: -12px;
