Set the background color of the type gap in the setting dialog gray when disabled.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -2,8 +2,7 @@
     border: 1px solid black;
 }
 
-.textae-editor--wait,
-.textae-editor--wait textae-editor__setting-dialog {
+.textae-editor--wait{
     cursor: wait;
 }
 
