Add a style of p to overwrite outer css files.

--- a/src/lib/css/textae-editor.css
+++ b/src/lib/css/textae-editor.css
@@ -40,6 +40,11 @@
     line-height: 400%;
 }
 
+/* prefer calculated line height */
+.textae-editor__body__text-box p {
+    line-height: inherit;
+}
+
 .textae-editor__body__annotation-box {
     left: 0px;
     position: absolute;
